# python-typing-koans

./: .gitignore  README.md  cli.py  mypy.ini  pyproject.toml  requirements.txt
koans/dj_koans/mysite/: mypy.ini
koans/dj_koans/mysite/mysite/: asgi.py  settings.py  urls.py  wsgi.py
koans/dj_koans/mysite/polls/: 100-easy-views.py  101-easy-models.py  102-medium-aggregation-queries.py
koans/dj_koans/mysite/polls/drf_koans/: 100-easy-views.py  101-medium-serializer.py
koans/dj_koans/mysite/polls/koans/: 100-easy-views.py  101-easy-models.py  102-medium-aggregation-queries.py  103-medium-model-managers.py
koans/py/: 100-easy-variable-wrong-type.py  101-easy-tuple-value.py  102-easy-list-homogenous.py  103-easy-mixed-values.py  104-easy-union-example.py  105-easy-dictionary-example.py  106-easy-function-example.py  107-easy-typed-dict.py  108-easy-type-alias.py  109-easy-user-defined-class.py  110-easy-class-variable.py  111-medium-callable-annotate.py  112-medium-type-as-example.py  113-easy-builder-pattern.py  114-medium-factory-pattern.py  115-medium-protocol-covariant-dbapi-example.py  116-easy-factory-example.py  117-easy-protocol-across-objects.py  118-medium-protocol-behave-like-dict.py  119-medium-queue-genrics.py  120-medium-decorator.py
web/: app.py
