[tool.poetry]
name = "python-typing-koans"
version = "0.0.1"
description = "Learn Python type-hints using koans"
authors = ["kracekumar <me@kracekumar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.4"
mypy = "^0.812"
click = "^7.1.2"
black = "^21.5b1"
requests = "^2.25.1"
rich = "^10.2.0"
Django = "^3.2.3"
django-stubs = "^1.8.0"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
black = "^21.5b1"
isort = "^5.8.0"
lxml = "^4.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
